added meta desc

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>V.V.S.K Chaitanya</title>
+  <meta name="description" content="VVSK Chaitanya, Lead Software Engineer, UX Design Expert and SME in Technology Architecture and System Design. Connect now with vvskchaitanya to build robust, reliable scalable business and consumer applications">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/icons/vvsk-icon.png">
